@@ -5,6 +5,7 @@ previous version for Python2 16 april 2018
 by Josquin Debaz
 GPL3
 13/12/2019
+modified 12/05/2021
 """
 
 import glob
@@ -12,6 +13,8 @@ import random
 import re
 import os
 import datetime
+from bs4 import BeautifulSoup
+
 
 try:
     from cleaning import Cleaner
@@ -53,10 +56,19 @@ class parseNewton(object):
                 id_article = random.randint(0, 1000000)                
             self.articles[id_article] = self.process(article)#content
             
+
+
     def get_articles(self, text):
-        articles = re.split('<hr size="1"', text)[2:-1]
+        soup = BeautifulSoup(text, 'lxml')
+        tables = soup.find_all("table",
+                               attrs={"style":"margin-top: 15px"})
+        articles = [table for table in tables
+                    if len(table.find_all('tr')) == 3]
+
+        print("found %s articles"% len(articles))
         for article in articles:
             yield article
+
 
     def replace_cz(self, text):
         latin1 = text.encode('ISO-8859-1', 'xmlcharrefreplace')
@@ -89,33 +101,59 @@ class parseNewton(object):
                   )
         return text
 
-
     def process(self, content):
         article_data = {}
-        content = self.replace_cz(content)
 
-        metadata, text = re.split("<em>zpet</em>", content)
-        article_data["title"] =\
-            re.findall('<a name="\d*">.*>(.*)</a>.*size="2">', metadata)[0]
-        date = re.split("\.",
-                        re.findall('>([\d\.]*)&nbsp;&nbsp;', metadata)[0])
-        article_data["date"] =  "%02d/%02d/%s"%(int(date[0]),
-                                                int(date[1]),
-                                                date[2])
-        splitted = re.split('&nbsp;&nbsp;(.*)</font>', metadata)[1]
-        article_data["media"] = re.findall('(.*)\&nbsp;&nbsp;str', splitted)[0]
-        article_data["observations"] = re.findall('\d&nbsp;&nbsp;(.*)</font>',
-                                                  splitted)[0]
-        article_data["narrator"] = re.findall('<em>(.*)</em>', splitted)[0]
-        
-        text = re.split('<font face="Arial" size="2">', text)[1]
-        text = re.split('</td>', text)[0]
-        text = re.sub('<br />', '', text)
-        text = re.sub('<strong><span style="background-color: #fac900; color: #000000;">', '', text)
-        text = re.sub('</span></strong>', '', text)
-        article_data['text'] = text
-                
-        return article_data  
+        article_data["title"] = content.find('a').text.strip()
+
+        for meta_data in content.find_all(class_="metadata-item"):
+            if re.search(r', Datum:\s\d', meta_data.text):
+                article_data["date"] = re.sub(r'\.', r'/',
+                                              meta_data.find('span').text)
+            elif re.search(r', Zdroj:', meta_data.text):
+                article_data["media"] = re.sub(r'\.', r'/',
+                                              meta_data.find('span').text)
+            elif re.search(r', Autor:', meta_data.text):
+                article_data["narrator"] = re.sub(r'\.', r'/',
+                                              meta_data.find('span').text)
+##            else:
+##                print(meta_data)
+        article_data["observations"] = ""
+        article_data['text'] = content.find(class_="article-content").text.strip()
+        return article_data
+
+
+##    def get_articles_old(self, text):
+##        articles = re.split('<hr size="1"', text)[2:-1]
+##        for article in articles:
+##            yield article
+
+##    def process_old(self, content):
+##        article_data = {}
+##        content = self.replace_cz(content)
+##
+##        metadata, text = re.split("<em>zpet</em>", content)
+##        article_data["title"] =\
+##            re.findall('<a name="\d*">.*>(.*)</a>.*size="2">', metadata)[0]
+##        date = re.split("\.",
+##                        re.findall('>([\d\.]*)&nbsp;&nbsp;', metadata)[0])
+##        article_data["date"] =  "%02d/%02d/%s"%(int(date[0]),
+##                                                int(date[1]),
+##                                                date[2])
+##        splitted = re.split('&nbsp;&nbsp;(.*)</font>', metadata)[1]
+##        article_data["media"] = re.findall('(.*)\&nbsp;&nbsp;str', splitted)[0]
+##        article_data["observations"] = re.findall('\d&nbsp;&nbsp;(.*)</font>',
+##                                                  splitted)[0]
+##        article_data["narrator"] = re.findall('<em>(.*)</em>', splitted)[0]
+##        
+##        text = re.split('<font face="Arial" size="2">', text)[1]
+##        text = re.split('</td>', text)[0]
+##        text = re.sub('<br />', '', text)
+##        text = re.sub('<strong><span style="background-color: #fac900; color: #000000;">', '', text)
+##        text = re.sub('</span></strong>', '', text)
+##        article_data['text'] = text
+##                
+##        return article_data  
 
     def get_supports(self, supports_path):
         """parse supports.publi and find correspondences"""
